--- a/app/_carousel.scss
+++ b/app/_carousel.scss
@@ -42,18 +42,18 @@
 
 #carousel-homepage > .carousel-control {
     opacity: 0.0;
-    -webkit-transition: 0.9s ease-in-out;
-    -moz-transition: 0.9s ease-in-out;
-    -o-transition: 0.9s ease-in-out;
-    transition: 0.9s ease-in-out;
+    -webkit-transition: 0.9s ease-out;
+    -moz-transition: 0.9s ease-out;
+    -o-transition: 0.9s ease-out;
+    transition: 0.9s ease-out;
 }
 
 #carousel-homepage:hover > .carousel-control {
     opacity: 0.8;
-    -webkit-transition: 0.9s ease-in-out;
-    -moz-transition: 0.9s ease-in-out;
-    -o-transition: 0.9s ease-in-out;
-    transition: 0.9s ease-in-out;
+    -webkit-transition: 0.9s ease-out;
+    -moz-transition: 0.9s ease-out;
+    -o-transition: 0.9s ease-out;
+    transition: 0.9s ease-out;
 }
 
 .item {
