--- a/home2016.css
+++ b/home2016.css
@@ -112,9 +112,9 @@ Wednesday 06, April, 2016
 
 .carousel-inner > .item > img { margin: auto; }
 
-#carousel-homepage > .carousel-control { opacity: 0.0; -webkit-transition: 0.9s ease-in-out; -moz-transition: 0.9s ease-in-out; -o-transition: 0.9s ease-in-out; transition: 0.9s ease-in-out; }
+#carousel-homepage > .carousel-control { opacity: 0.0; -webkit-transition: 0.9s ease-out; -moz-transition: 0.9s ease-out; -o-transition: 0.9s ease-out; transition: 0.9s ease-out; }
 
-#carousel-homepage:hover > .carousel-control { opacity: 0.8; -webkit-transition: 0.9s ease-in-out; -moz-transition: 0.9s ease-in-out; -o-transition: 0.9s ease-in-out; transition: 0.9s ease-in-out; }
+#carousel-homepage:hover > .carousel-control { opacity: 0.8; -webkit-transition: 0.9s ease-out; -moz-transition: 0.9s ease-out; -o-transition: 0.9s ease-out; transition: 0.9s ease-out; }
 
 .item { overflow: hidden; }
 
