carousel control adjust mobile margin top

--- a/app/_carousel.scss
+++ b/app/_carousel.scss
@@ -106,7 +106,7 @@
 @media screen and (max-width: 768px) {
     .carousel-control {
         position: absolute;
-        top: 15%;
+        margin-top: 13%;
         opacity: 0.8;
     }    
 }
