--- a/home2016.css
+++ b/home2016.css
@@ -138,7 +138,7 @@ Wednesday 06, April, 2016
 
 .caption-reverse > .caption-readmore hr { border-top: 1px solid #003879 !important; }
 
-@media screen and (max-width: 768px) { .carousel-control { position: absolute; top: 15%; opacity: 0.8; } }
+@media screen and (max-width: 768px) { .carousel-control { position: absolute; margin-top: 13%; opacity: 0.8; } }
 
 @media only screen and (min-width: 768px) { .carousel-indicators { bottom: 10px; width: 200px; right: 0; left: inherit; }
   .fa-lg { font-size: 1.8em; }
