carousel control adjust tablet margin top

--- a/app/_carousel.scss
+++ b/app/_carousel.scss
@@ -125,7 +125,7 @@
 
     .carousel-control {
         position: absolute;
-        top: 24%;
+        margin-top: 24%;
         opacity: 0.8;
     }
     .carousel-caption > h2 {
