updated h1 to requirements

--- a/main2016.css
+++ b/main2016.css
@@ -1721,10 +1721,9 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   padding-left: .5em;
-  color: #1B557A;
-  font-size: 2.2em;
-  font-weight: 200;
-  margin-left: 10px;
+  color: #002856;
+  font-size: 2.6em;
+  font-weight: 700;
   text-transform: uppercase;
 }
 
