--- a/app/_main2016.scss
+++ b/app/_main2016.scss
@@ -1479,11 +1479,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 h1 {
   padding-left: .5em;
-  color: #1B557A;
-  font-size: 2.2em;
-  font-weight: 200;
-  margin-left: 10px;
-  text-transform: uppercase
+  color: #002856;
+  font-size: 2.6em;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 h2 {
 font-weight: 200;
