--- a/main2016.css
+++ b/main2016.css
@@ -448,12 +448,17 @@
   padding: 2.5em 2em 0;
 }
 
-.byline {
-  font-weight: normal;  
+.header h1 {
+  margin: .2em 0;
+  font-size: 3em;
+  font-weight: 300;
 }
 
-.header-date {
-  font-weight: 1.4em;
+.header h2 {
+  font-weight: 300;
+  color: #ccc;
+  padding: 0;
+  margin-top: 0;
 }
 
 #menu {
@@ -465,8 +470,7 @@
   left: 150px;
   bottom: 0;
   z-index: 9998;
-  /*background: #1b557a;*/
-  background: #002856;
+  background: #1b557a;
   -webkit-overflow-scroll: touch;
 }
 
@@ -693,18 +697,15 @@ ul.multilevel-linkul-0 {
 }
 
 ul.multilevel-linkul-0 li {
-/*  background: #20638f;*/
-  background: #00447C;
+  background: #20638f;
 }
 
 ul.multilevel-linkul-1 li {
-  /*background: #2472a4;*/
-  background: #005BA5;
+  background: #2472a4;
 }
 
 ul.multilevel-linkul-2 li {
-  /*background: #2980b9;*/
-  background: #00447C;
+  background: #2980b9;
 }
 
 ul.multilevel-linkul-3 li {
@@ -1603,17 +1604,6 @@ table.caption {
   font-weight: 200;
 }
 
-.pager {
-  color: #3289BE;
-  font-weight: bold;
-  font-size: 2.0em;
-}
-
-.fa {
-  font-weight: bold;
-  font-size: 1.0em;
-}
-
 .content {
   margin: 0 auto 15px;
   line-height: 1.6em;
@@ -1738,11 +1728,11 @@ h1 {
 }
 
 h2 {
-  font-weight: 600;
+  font-weight: 200;
   text-align: right;
   text-transform: uppercase;
   color: #00529c;
-  font-size: 2.2em;
+  font-size: 23pt;
   width: 100%;
   margin: 0px;
   margin-bottom: 15px;
@@ -1753,23 +1743,23 @@ h2 {
 
 h3 {
   color: #4C4C4D;
-  font-size: 2.0em;
+  font-size: 1.8em;
   font-weight: 400;
   margin-bottom: 4px;
   margin-top: 2px;
 }
 
 h4 {
-  color: #015FAE;
-  font-size: 1.4em;
-  font-weight: 400;
+  color: #3498db;
+  font-size: 18px;
+  font-weight: 500;
   line-height: 1.3;
 }
 
 h5 {
-  color: #971200;
-  font-size: 1.2em;
-  font-weight: 600;
+  color: #2c3e50;
+  font-size: 16px;
+  font-weight: 500;
 }
 
 h6 {
@@ -1840,17 +1830,6 @@ ul.breadcrumb a {
   font-size: 12px;
   line-height: 19px;
   color: #73787e;
-}
-
-figcaption.caption {
-  color: #00529C;
-  font-size: 14px;
-  font-style: italic;
-}
-
-.thumbnail .caption {
-  padding-left: 20px;
-  padding-right: 20px;
 }
 
 .bordered {
