--- a/app/_main2016.scss
+++ b/app/_main2016.scss
@@ -387,23 +387,9 @@ p.actionHeader {
   left: 0;
   top: 100px
 }
-.header {
-  margin: 0;
-  color: #333;
-  text-align: center;
-  padding: 2.5em 2em 0
-}
-.header h1 {
-  margin: .2em 0;
-  font-size: 3em;
-  font-weight: 300
-}
-.header h2 {
-  font-weight: 300;
-  color: #ccc;
-  padding: 0;
-  margin-top: 0
-}
+
+
+
 #menu {
   margin-left: -150px;
   width: 150px;
@@ -1485,36 +1471,31 @@ h1 {
   text-transform: uppercase;
 }
 h2 {
-font-weight: 200;
-text-align: right;
-text-transform: uppercase;
+font-weight: 600;
 color: #00529c;
-font-size: 23pt;
+font-size: 2.2em;
 width: 100%;
 margin: 0px;
 margin-bottom:15px;
 line-height: 1.3;
-//background-color: #fff;
-border-style: none;
-border-bottom: 1px solid #949fa8;
 }
 h3 {
   color: #4C4C4D;
-  font-size: 1.8em;
+  font-size: 2.0em;
   font-weight: 400;
   margin-bottom: 4px;
   margin-top: 2px
 }
 h4 {
-  color: #3498db;
-  font-size: 18px;
-  font-weight: 500;
+  color: #015FAE;
+  font-size: 1.4em;
+  font-weight: 400;
   line-height: 1.3;
 }
 h5 {
-  color: #2c3e50;
-  font-size: 16px;
-  font-weight: 500
+  color: #971200;
+  font-size: 1.2em;
+  font-weight: 600;
 }
 h6 {
   color: #e74c3c;
