--- a/app/_toolbar.scss
+++ b/app/_toolbar.scss
@@ -43,6 +43,20 @@
     background: #ecf0f1!important;
     color: #333!important;
 }
+.nav-social {
+    border-bottom: 48px solid #d11242;
+    border-left: 35px solid transparent;
+    border-right: 0px solid transparent;
+    height: 0;
+    float: right;
+}
+
+  .nav-social>a>i.fa {
+    color: white;
+    font-size: 18px;
+    padding: 15px 10px;
+}
+
 .navbar {
     border-radius: 0!important;
     margin-bottom: 0;
