--- a/app/_main2016.scss
+++ b/app/_main2016.scss
@@ -10,6 +10,7 @@
 
 @import"variables";
 // @import"ContentTypes/oldhomepage";
+@import"ContentTypes/content";
 @import"ContentTypes/navmenu";
 @import"ContentTypes/TableStyles";
 @import"ContentTypes/AdmissionsStyles";
@@ -129,47 +130,6 @@
   -ms-interpolation-mode: bicubic
 }
 
-.content {
-  margin: 0 auto 15px;
-  line-height: 1.6em;
-  min-width: inherit;
-  padding: 1.5em;
-  color: #333;
-  background: #fff;
-  max-width: 1200px
-}
-.content .img-responsive {
-  padding: 0 15px;
-}
-.content .hero>.img-responsive {
-  padding: inherit;
-  margin-bottom:30px;
-}
-.content .nopadding img.img-responsive {
-  padding: 0
-}
-.content img.border {
-  padding: 10px;
-  border: 1px solid #ececec;
-  background: #fff
-}
-.content a {
-  color: #248dc1;
-  text-decoration: none;
-  font-weight: 700
-}
-.content a:hover {
-  color: #003663;
-  border-bottom: 1px solid
-}
-.content .description {
-  font-size: 10px
-}
-.content-subhead {
-  margin: 50px 0 20px;
-  font-weight: 300;
-  color: #888
-}
 .panel-default {
   border: 1px solid #1b557a
 }
