--- a/home2016.css
+++ b/home2016.css
@@ -85,7 +85,7 @@ Wednesday 06, April, 2016
   .nav-social { border-bottom: 48px solid #d11242; border-left: 35px solid transparent; border-right: 0 solid transparent; height: 0; }
   .navbar .navbar-nav > .quicktools { display: inline-block; float: none; margin-bottom: -2px; }
   .navbar .navbar-collapse { text-align: center; }
-  .mainBlueNavigation { background: url("<t4 type='media' id='106586' formatter='image/path'/>") no-repeat; background-size: cover; }
+  .mainBlueNavigation { background: url("media/assets/homepagespring2016/home_headerbg.jpg") no-repeat; background-size: cover; }
   .mainBlueNavigation ul li a { color: #fff !important; font-size: 1.2em; font-weight: 100; font-family: 'Fjalla One', sans-serif; padding-top: 20px !important; padding-bottom: 15px !important; }
   ul.dropdown-menu > li a { padding-top: 0; }
   ul.dropdown-menu > li a { font-family: sans-serif; }
@@ -104,11 +104,17 @@ Wednesday 06, April, 2016
 
 .carousel-control.left { background: none !important; width: 80px; text-align: right; text-shadow: none !important; }
 
+.carousel-control { opacity: 0.0; }
+
 .fa-inverse { color: #003879 !important; }
 
-.fa-lg { font-size: 1.3em; }
+.fa-lg { font-size: 1.8em; }
 
 .carousel-inner > .item > img { margin: auto; }
+
+#carousel-homepage > .carousel-control { opacity: 0.0; -webkit-transition: 0.5s ease-in-out; -moz-transition: 0.5s ease-in-out; -o-transition: 0.5s ease-in-out; transition: 0.5s ease-in-out; }
+
+#carousel-homepage:hover > .carousel-control { opacity: 0.5; -webkit-transition: 0.5s ease-in-out; -moz-transition: 0.5s ease-in-out; -o-transition: 0.5s ease-in-out; transition: 0.5s ease-in-out; }
 
 .item { overflow: hidden; }
 
@@ -138,23 +144,17 @@ Wednesday 06, April, 2016
 
 .caption-reverse > .caption-readmore hr { border-top: 1px solid #003879 !important; }
 
-@media screen and (max-width: 768px) { .carousel-control { position: absolute; margin-top: 13%; opacity: 0.8; } }
+.firstheight img { display: none; }
 
 @media only screen and (min-width: 768px) { .carousel-indicators { bottom: 10px; width: 200px; right: 0; left: inherit; }
-  .fa-lg { font-size: 1.8em; }
-  .carousel-control { position: absolute; margin-top: 24%; opacity: 0.8; }
+  .carousel-control { position: absolute; top: 30%; }
   .carousel-caption > h2 { font-size: 32px; }
   .carousel-caption > h3 { font-size: 23px; line-height: 30px; } }
 
 @media screen and (min-width: 992px) { .carousel { margin-bottom: 15px; }
-  .carousel-control { position: absolute; top: 44%; opacity: 0.0; }
   .calls-to-action > h3 > a { font-size: 1.5em; }
   .carousel-indicators { bottom: 10px; width: 200px; right: 0; left: inherit; }
-  .carousel-caption { position: absolute; right: 100%; left: 0; width: 50%; padding: 15px 30px; background: rgba(0, 68, 124, 0.9); }
-  #carousel-homepage:hover > .carousel-control { opacity: 0.8; -webkit-transition: 0.9s ease-out; -moz-transition: 0.9s ease-out; -o-transition: 0.9s ease-out; transition: 0.9s ease-out; } }
-
-@media screen and (min-width: 1200px) { .carousel-control { position: absolute; top: 44%; opacity: 0.0; }
-  #carousel-homepage:hover > .carousel-control { opacity: 0.8; -webkit-transition: 0.9s ease-out; -moz-transition: 0.9s ease-out; -o-transition: 0.9s ease-out; transition: 0.9s ease-out; } }
+  .carousel-caption { position: absolute; right: 100%; left: 0; width: 50%; padding: 15px 30px; background: rgba(0, 68, 124, 0.9); } }
 
 .footer { display: block; min-height: 20px; padding: 20px; background: #003663; margin-left: 0; margin-right: 0; }
 
@@ -165,7 +165,7 @@ Wednesday 06, April, 2016
 @media only screen and (min-width: 768px) { .campus-info { border: 0; border-right: 1px solid white; border-bottom: 0; margin-bottom: 0; } }
 
 /* Calls to action */
-.calls-to-action { padding: 25px; background: url("<t4 type='media' id='104546' formatter='image/path'/>") no-repeat; background-size: cover; background-color: rgba(52, 152, 219, 0.72); margin-bottom: 15px; }
+.calls-to-action { padding: 25px; background: url("media/assets/homepagespring2016/calltoactbg.png") no-repeat; background-size: cover; background-color: rgba(52, 152, 219, 0.72); margin-bottom: 15px; }
 
 .calls-to-action > hr { border-top: 1px solid rgba(255, 255, 255, 0.2); margin-top: 15px; margin-bottom: 15px; }
 
