--- a/home2016.css
+++ b/home2016.css
@@ -212,11 +212,17 @@ Wednesday 06, April, 2016
 
 .carousel-control.left { background: none !important; width: 80px; text-align: right; text-shadow: none !important; }
 
+.carousel-control { opacity: 0.0; }
+
 .fa-inverse { color: #003879 !important; }
 
-.fa-lg { font-size: 1.3em; }
+.fa-lg { font-size: 1.8em; }
 
 .carousel-inner > .item > img { margin: auto; }
+
+#carousel-homepage > .carousel-control { opacity: 0.0; -webkit-transition: 0.5s ease-in-out; -moz-transition: 0.5s ease-in-out; -o-transition: 0.5s ease-in-out; transition: 0.5s ease-in-out; }
+
+#carousel-homepage:hover > .carousel-control { opacity: 0.5; -webkit-transition: 0.5s ease-in-out; -moz-transition: 0.5s ease-in-out; -o-transition: 0.5s ease-in-out; transition: 0.5s ease-in-out; }
 
 .item { overflow: hidden; }
 
@@ -246,23 +252,17 @@ Wednesday 06, April, 2016
 
 .caption-reverse > .caption-readmore hr { border-top: 1px solid #003879 !important; }
 
-@media screen and (max-width: 768px) { .carousel-control { position: absolute; margin-top: 13%; opacity: 0.8; } }
+.firstheight img { display: none; }
 
 @media only screen and (min-width: 768px) { .carousel-indicators { bottom: 10px; width: 200px; right: 0; left: inherit; }
-  .fa-lg { font-size: 1.8em; }
-  .carousel-control { position: absolute; margin-top: 24%; opacity: 0.8; }
+  .carousel-control { position: absolute; top: 30%; }
   .carousel-caption > h2 { font-size: 32px; }
   .carousel-caption > h3 { font-size: 23px; line-height: 30px; } }
 
 @media screen and (min-width: 992px) { .carousel { margin-bottom: 15px; }
-  .carousel-control { position: absolute; top: 44%; opacity: 0.0; }
   .calls-to-action > h3 > a { font-size: 1.5em; }
   .carousel-indicators { bottom: 10px; width: 200px; right: 0; left: inherit; }
-  .carousel-caption { position: absolute; right: 100%; left: 0; width: 50%; padding: 15px 30px; background: rgba(0, 68, 124, 0.9); }
-  #carousel-homepage:hover > .carousel-control { opacity: 0.8; -webkit-transition: 0.9s ease-out; -moz-transition: 0.9s ease-out; -o-transition: 0.9s ease-out; transition: 0.9s ease-out; } }
-
-@media screen and (min-width: 1200px) { .carousel-control { position: absolute; top: 44%; opacity: 0.0; }
-  #carousel-homepage:hover > .carousel-control { opacity: 0.8; -webkit-transition: 0.9s ease-out; -moz-transition: 0.9s ease-out; -o-transition: 0.9s ease-out; transition: 0.9s ease-out; } }
+  .carousel-caption { position: absolute; right: 100%; left: 0; width: 50%; padding: 15px 30px; background: rgba(0, 68, 124, 0.9); } }
 
 .footer { display: block; min-height: 20px; padding: 20px; background: #003663; margin-left: 0; margin-right: 0; }
 
