fixes college portrait alignment

--- a/app/_footer.scss
+++ b/app/_footer.scss
@@ -19,6 +19,9 @@
     border-bottom: 1px solid white;
     margin-bottom: 15px;
 }
+.college-portrait {
+    float: right;
+}
 @media only screen and (min-width: 768px) {
     .campus-info {
         border: 0;
