fixed padding on sidebar bottom margin

--- a/app/ContentTypes/_navmenu.scss
+++ b/app/ContentTypes/_navmenu.scss
@@ -175,7 +175,7 @@ ul.multilevel-linkul-0 {
   }
 }
 .sidebar-nav {
-  margin-bottom: 2em;
+  margin-bottom: 15px;
   background: #002856;
 }
 .sidebar-nav ul li {
