--- a/home2016.css
+++ b/home2016.css
@@ -183,8 +183,6 @@ Wednesday 06, April, 2016
 
 .caret-up { width: 0; height: 0; border-left: 4px solid transparent; border-right: 4px solid transparent; border-bottom: 4px solid; display: inline-block; margin-left: 2px; vertical-align: middle; }
 
-.msudenver_logo img { width: 115px; margin: 10px; }
-
 @media only screen and (max-width: 320px) { .navbar-brand { height: 53px; } }
 
 @media only screen and (max-width: 767px) { .nav-social { background: #d11242; } }
@@ -199,8 +197,7 @@ Wednesday 06, April, 2016
   ul.dropdown-menu > li a { font-family: sans-serif; }
   ul.nav.navbar-nav.navbar-center { list-style: none !important; margin: auto !important; width: -webkit-fit-content; width: -moz-fit-content; width: fit-content; float: none; display: inline-block; } }
 
-@media screen and (min-width: 992px) { .msudenver_logo img { width: 165px; margin: 15px 25px; }
-  .mainBlueNavigation ul li a { padding-top: 70px !important; } }
+@media screen and (min-width: 992px) { .mainBlueNavigation ul li a { padding-top: 70px !important; } }
 
 @media only screen and (min-width: 1200px) { .mainBlueNavigation ul li a { font-size: 1.5em; }
   .navbar-collapse { padding-right: 0; padding-left: 0; } }
@@ -269,6 +266,8 @@ Wednesday 06, April, 2016
 .footer a, .footer p { color: #fff; font-size: 15px; font-weight: 200; text-align: right; }
 
 .campus-info { border: 0; border-bottom: 1px solid white; margin-bottom: 15px; }
+
+.college-portrait { float: right; }
 
 @media only screen and (min-width: 768px) { .campus-info { border: 0; border-right: 1px solid white; border-bottom: 0; margin-bottom: 0; } }
 
