updates min-height for nabber to 48px

--- a/home2016.css
+++ b/home2016.css
@@ -157,7 +157,7 @@ Wednesday 06, April, 2016
 
 .nav-social > a > i.fa { color: white; font-size: 18px; padding: 15px 10px; }
 
-.navbar { border-radius: 0 !important; margin-bottom: 0; }
+.navbar { min-height: 48px; border-radius: 0 !important; margin-bottom: 0; }
 
 .navbar-nav { margin: 0; }
 
