adds 48px to navbar

--- a/app/_toolbar.scss
+++ b/app/_toolbar.scss
@@ -43,6 +43,7 @@
     background: #ecf0f1!important;
     color: #333!important;
 }
+
 .nav-social {
     border-bottom: 48px solid #d11242;
     border-left: 35px solid transparent;
@@ -58,6 +59,7 @@
 }
 
 .navbar {
+    min-height: 48px;
     border-radius: 0!important;
     margin-bottom: 0;
 }
