fixes panels.scss path

--- a/app/_home2016.scss
+++ b/app/_home2016.scss
@@ -6,12 +6,12 @@ Wednesday 06, April, 2016
 
 
 !!! */
+@import "Content/Types/panel.scss";
 @import "variables.scss";
 @import "toolbar.scss";
 @import "carousel.scss";
 @import "footer.scss";
 @import "callstoaction.scss";
-@import "panel.scss";
 
 .clickable.col-lg-12.col-lg-6,
 .clickable.col-xs-6.col-sm-6.col-md-6.col-lg-3 {
