--- a/main2016.css
+++ b/main2016.css
@@ -495,6 +495,19 @@ table.caption { margin: 20px; padding: 10px; max-width: 100%; background-color: 
 
 .story_preview:nth-child(even) { background-color: #fff; }
 
+/* Panel Styles */
+.panel { border: 0; border-radius: 0; }
+
+.panel-heading { border-radius: 0; }
+
+.panel-default { border: 1px solid #1b557a; }
+
+.panel-default > .panel-heading { background: #1b557a; color: #fff; font-size: 1.5em; border-color: #1b557a; }
+
+.panel-title { color: #fff; }
+
+.panel-group { margin-bottom: 20px; border-radius: 0; }
+
 /* Toolbar Styles */
 .toolbar { z-index: 9999; background: #fff; }
 
@@ -587,8 +600,6 @@ table.caption { margin: 20px; padding: 10px; max-width: 100%; background-color: 
 
 .bannerImage { max-width: 100%; padding: 5px; overflow: hidden; margin-bottom: 1.5em; }
 
-.panel-group { margin-bottom: 20px; border-radius: 0; }
-
 .expert { padding: 1.5em; margin-bottom: 20px; position: relative; zoom: 1; border: 1px solid #e3e3e3; -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05); -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05); }
 
 .newsimage { float: right; }
@@ -610,12 +621,6 @@ table.caption { margin: 20px; padding: 10px; max-width: 100%; background-color: 
 .ie8 .navbar-inverse .navbar-brand { color: inherit; }
 
 .ie8 img { display: block; height: auto !important; max-width: 100%; vertical-align: middle; border: 0; -ms-interpolation-mode: bicubic; }
-
-.panel-default { border: 1px solid #1b557a; }
-
-.panel-default > .panel-heading { background: #1b557a; color: #fff; font-size: 1.5em; border-color: #1b557a; }
-
-.panel-title { color: #fff; }
 
 img { max-width: 100%; height: auto; }
 
@@ -726,7 +731,3 @@ hr { border-top: 2px solid #e6e1e1; }
 .btn { border-radius: 0; margin-bottom: 15px; font-weight: 100 !important; opacity: .80; transition: opacity 250ms ease-in-out; box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.175); }
 
 .btn:hover { opacity: 1; transition: opacity 250ms ease-in-out; }
-
-.panel { border-radius: 0px; }
-
-.panel-heading { border-top-right-radius: 0px; border-top-left-radius: 0px; }
