--- a/app/ContentTypes/content.scss
+++ b/app/ContentTypes/content.scss
@@ -40,3 +40,20 @@
   font-weight: 300;
   color: #888
 }
+
+
+.content p a,
+.content ul a {
+color: #248dc1 !important;
+text-decoration: none !important;
+padding-bottom: 0px !important;
+border-bottom:  0px solid #248dc1 !important;
+transition: all 250ms ease-in-out;
+}
+.content p a:hover,
+.content ul a:hover {
+text-decoration: none !important;
+padding-bottom: 3px !important;
+border-bottom:  2px solid #248dc1 !important;
+transition: all 250ms ease-in-out;
+}
