--- a/app/ContentTypes/_newsroom.scss
+++ b/app/ContentTypes/_newsroom.scss
@@ -1,8 +1,10 @@
+h3{
+  padding-bottom:15px;
+}
 .byline {
 color: #1E1E1E;
 font-size: 1.4em;
 text-transform: uppercase;
-margin-top:15px;
   a {
     color: #1E1E1E !important;
     font-weight: 400;
@@ -16,17 +18,17 @@ margin-top:15px;
 
 .Newsroom-image {
   float: right;
-.thumbnail {
-    border: none;
-    max-width : 500px;
+  .thumbnail {
+      border: none;
+      max-width : 500px;
 
-}
-.thumbnail .caption {
-    padding: 20px;
-    color: #00529C;
-    font-style: italic;
-    font-size: 1em;
-}
+  }
+  .thumbnail .caption {
+      padding: 20px;
+      color: #00529C;
+      font-style: italic;
+      font-size: 1em;
+  }
 }
 
 .story_preview {
@@ -37,4 +39,13 @@ margin-top:15px;
 }
 .story_preview:nth-child(even) {
   background-color: #fff
+}
+.share-story-icons {
+    text-align: right;
+    font-size: 1.8em;
+    .fa {
+      color:#3289BE;
+      padding-left:10px;
+      padding-right:10px;
+    }
 }
