--- a/main2016.css
+++ b/main2016.css
@@ -481,7 +481,9 @@ table.caption { margin: 20px; padding: 10px; max-width: 100%; background-color: 
 
 .hero-caption h2 { color: #fff; position: absolute; right: 0; bottom: 0; background: rgba(0, 0, 0, 0.5); margin: 0; font-weight: 100; padding: 2%; }
 
-.byline { color: #1E1E1E; font-size: 1.4em; text-transform: uppercase; margin-top: 15px; }
+h3 { padding-bottom: 15px; }
+
+.byline { color: #1E1E1E; font-size: 1.4em; text-transform: uppercase; }
 
 .byline a { color: #1E1E1E !important; font-weight: 400; }
 
@@ -498,6 +500,10 @@ table.caption { margin: 20px; padding: 10px; max-width: 100%; background-color: 
 .story_preview:nth-child(odd) { background-color: #f0f0f0; }
 
 .story_preview:nth-child(even) { background-color: #fff; }
+
+.share-story-icons { text-align: right; font-size: 1.8em; }
+
+.share-story-icons .fa { color: #3289BE; padding-left: 10px; padding-right: 10px; }
 
 /* Panel Styles */
 .panel { border: 0; border-radius: 0; }
@@ -646,11 +652,11 @@ body { background: url(data:image/jpeg;base64,/9j/4QAYRXhpZgAASUkqAAgAAAAAAAAAAA
 
 h1, h2, h3, h4, h5, h6 { font-family: Open Sans, helvetica, arial, sans-serif; }
 
-h1 { padding-left: .5em; color: #002856; font-size: 2.6em; font-weight: 700; text-transform: uppercase; }
+h1 { padding-left: .5em; color: #002856; font-size: 2.6em; font-weight: 600; text-transform: uppercase; }
 
 h2 { font-weight: 600; color: #00529c; font-size: 2.2em; width: 100%; margin: 0px; margin-bottom: 15px; line-height: 1.3; }
 
-h3 { color: #4C4C4D; font-size: 2.0em; font-weight: 400; margin-bottom: 4px; margin-top: 2px; }
+h3 { color: #4C4C4D; font-size: 1.8em; font-weight: 400; margin-bottom: 4px; margin-top: 2px; }
 
 h4 { color: #015FAE; font-size: 1.4em; font-weight: 400; line-height: 1.3; }
 
